--- a/style.css
+++ b/style.css
@@ -190,16 +190,16 @@ a {
 }
 
 .intro-box:hover #myname {
-    top: 22px;
+    top: 45px;
 }
 
 .intro-box2 {
-    position: relative;
+    position: absolute;
     width:300px;
     height: 160px;
     background-color: rgb(233,225,221);
-    top: 120px;
-    left: -200px;
+    top: 0px;
+    left: 0px;
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
     border-top-left-radius: 20px;
@@ -235,7 +235,7 @@ a {
 }
 
 #hello {
-    position: relative;
+    position: absolute;
     top: 30px;
     left: 20px;
     font-size: 1.3em;
@@ -248,8 +248,8 @@ a {
 }
 
 #myname {
-    position: relative;
-    top: 30px;
+    position: absolute;
+    top: 60px;
     left: 13px;
     font-family: 'Oswald', sans-serif;
     font-weight: 500;
@@ -264,14 +264,14 @@ a {
 .pfp {
     width: 300px;
     height: 300px;
-    top: 30px;
-    left: 150px;
-    position: relative;
+    top: 4vw;
+    right: 10.8vw;
+    position: absolute;
 
 }
 
 .pfp:hover {
-    animation: pfp-rotate 4s ease infinite 0.5s;
+    animation: my-rotate 4s ease infinite 0.5s;
 }
 
 .about-me {
@@ -293,7 +293,6 @@ a {
 }
 
 .heading {
-    margin: 0px;
     padding: 10px;
     position: relative;
     text-align: center;
@@ -357,21 +356,24 @@ a {
 .contact-links {
     font-size:3em;
     display: flex;
-    position: relative;
-    top: 350px;
-    left: -115px;
+    position: absolute;
+    right: 10vw;
+    bottom: 4vw;
     /* padding: 20px; */
     color: #CD1818;
     /* text-align: center;     */
 }
 
-#link1, #link2, #link3 {
+
+
+#link1, #link2, #link3, #link4 {
     margin: 5px;
-    transition: font-size 0.5s ease;
+    transition: transform 0.5s ease;
 }
 
-#link1:hover, #link2:hover, #link3:hover {
-    font-size: 1.1em;
+#link1:hover, #link2:hover, #link3:hover, #link4:hover {
+    animation: my-rotate2 1s ease infinite;
+    /* transform: scale(0.8);  */
 }
 
 #link {
@@ -429,8 +431,8 @@ a {
 
 
 @keyframes intro-box-movement2 {
-    0% {top: 45px;pointer-events: none;}
-    100% {top: 30px;pointer-events: none;}
+    0% {top: 60px;pointer-events: none;}
+    100% {top: 10px;pointer-events: none;}
 }
 
 @keyframes icon-shrink {
@@ -438,8 +440,14 @@ a {
     100% {transform: scale(1);}
 }
 
-@keyframes pfp-rotate {
+@keyframes my-rotate {
     0% {transform: rotate(0deg);}
     50% {transform: rotate(180deg);}
+    100% {transform: rotate(360deg);}
+}
+
+@keyframes my-rotate2 {
+    0% {transform: rotate(0deg);}
+    /* 50% {transform: rotate(180deg);} */
     100% {transform: rotate(360deg);}
 }
