--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 html {
     scroll-behavior: smooth;
 }
@@ -6,8 +7,13 @@ body {
     background-image: url("waveBG.png");
     background-size: cover;
     background-attachment: fixed;
-    top:0;
+    margin:0;
     position: relative;
+    /* font-size: 20px; */
+}
+
+*, *::before, *::after {
+    box-sizing: border-box;
 }
 
 /* body::-webkit-scrollbar {
@@ -24,12 +30,13 @@ a {
     /* position: absolute; */
     position: fixed;
     /* background-color: rgb(255,255,255); */
+    display: none;
     top: 0px;
     left: 0;
     right:0;
     bottom: 0;
     width: 100%;
-    height: 60px;
+    height: 10%;
     /* animation: opacityUP 2.5s ease 1;
     -webkit-animation: opacityUP 2.5s ease 1;
     -moz-animation: opacityUP 2.5s ease 1;
@@ -45,23 +52,33 @@ a {
 
 .navbar ul {
     
-    display: flex;
+    display: none;
     flex-direction: row;
     justify-content:center;
     align-items: center;
     /* position: absolute; */
     position: relative;
-    top: 5px;
+    top: 1%;
     margin: 0;
     padding: 0;
     /* border: 4px solid green; */
     /* opacity: 0; */
 }
 
+@media (orientation: landscape) {
+    .navbar {
+        display: block;
+    }
+
+    .navbar ul {
+        display: flex;
+    }    
+}
+
 .navbar ul li {
     position: relative;
     list-style: none;
-    margin: 2px;
+    margin: 0.2em;
 }
 
 .navbar ul li a{
@@ -87,7 +104,10 @@ a {
     justify-content: center;
     padding-top: 0.5em;
     position: relative;
-    top: 3px;
+    /* top: 0.3em;
+     */
+    margin: 0.3em auto 0 auto;
+    font-size: 1em;
     transform: scale(1.5);
     transition: transform 0.2s ease;
     
@@ -101,7 +121,7 @@ a {
     color: rgb(27,27,27);
     position: relative;
     margin: 0.2em;
-    font-size: 0.9em;
+    font-size: 1em;
     text-align: center;
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
@@ -124,23 +144,23 @@ a {
 }
 
 .navbar ul li[class=item1] {
-    animation: navbar-startup1 1.3s ease 1;
+    animation: navbar-startup1 1.5s ease 1;
 }
 
 .navbar ul li[class=item2] {
-    animation: navbar-startup2 1.3s ease 1;
+    animation: navbar-startup2 1.5s ease 1;
 }
 
 /* .navbar ul li[class=item3] {
-    animation: navbar-startup3 1.3s ease 1;
+    animation: navbar-startup3 1.5s ease 1;
 } */
 
 .navbar ul li[class=item3] {
-    animation: navbar-startup4 1.3s ease 1;
+    animation: navbar-startup4 1.5s ease 1;
 }
 
 .navbar ul li[class=item4] {
-    animation: navbar-startup5 1.3s ease 1;
+    animation: navbar-startup5 1.5s ease 1;
 }
 
 .navbar ul li[class*=item]:hover .navbar-headings {
@@ -156,12 +176,16 @@ a {
 .home {
     position: relative;
     display: flex;
-    /* flex-direction: column; */
-    top: 70px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     /* bottom: 0; */
-    height: 480px;
-    margin: 0 20px;
-    border : 4px solid #A13333; border-radius: 10px;
+    /* height: 66%; */
+    margin: 5em auto 2em auto;
+    /* padding: 1em; */
+    width: 80%;
+    max-width:1200px;
+    border : 0.3em solid #A13333; border-radius: 1em;
     animation: opacityUP 2s ease 1;
     -webkit-animation: opacityUP 2s ease 1;
     -moz-animation: opacityUP 2s ease 1;
@@ -171,43 +195,67 @@ a {
 
 .intro-box {
     position: relative;
-    width: 300px;
-    height: 150px;
+    width: 46%;
+    max-width: 40vw;
+    /* display: inline-block; */
+    padding: 0.1em;
+    /* max-width: 285px; */
+    height: 9em;
+    max-height: 200px;
+    margin: 7em auto;
+    /* margin-top:20%; */
     background-color: rgb(255,245,237);
-    top: 120px;
-    left: 100px;
-    border-radius: 20px;
+    /* top: 20%; */
+    /* left: 10%; */
+    border-radius: min(2em, 2vw);
+    /* margin: 20px; */
     /* justify-content: center; */
     /* text-align: center; */
     /* align-items: center; */
     cursor: pointer;
     user-select: none;
-    
+    /* transform: scale(1.4); */
 }
 
 .intro-box:hover #hello {
-    top: 37px;
+    top: 22%;
 }
 
 .intro-box:hover #myname {
-    top: 45px;
+    bottom: 10%;
 }
+
+/* rgb(233,225,221) */
 
 .intro-box2 {
     position: absolute;
-    width:300px;
-    height: 160px;
+    width: 100%;
+    max-width: 40vw;
+    /* display: inline-block; */
+    padding: 0.1em;
+    /* max-width: 285px; */
+    height: 107%;
+    top: 0;
+    left: 0;
+    max-height: 20vw;
+    /* top: 0;left: 0; */
+    /* margin: 7em auto; */
+    /* margin-top:20%; */
     background-color: rgb(233,225,221);
-    top: 0px;
-    left: 0px;
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    /* top: 20%; */
+    /* left: 10%; */
+
+    border-top-left-radius: min(2em, 2vw);
+    border-top-right-radius: min(2em, 2vw);
+    border-bottom-left-radius: min(2.5em, 3vw);
+    border-bottom-right-radius: min(2.5em, 3vw);
+    /* margin: 20px; */
+    /* justify-content: center; */
+    /* text-align: center; */
+    /* align-items: center; */
     cursor: pointer;
     user-select: none;
-    z-index: -1;
-    
+    z-index:-1;
 }
 
 .intro-box::before {
@@ -215,12 +263,10 @@ a {
     content: "";
     position: absolute;
     background: rgb(233,225,221);
-    /* top: 140px; */
-    top: 140px;
-    left: 50px;
+    margin-top:10em;
     transform: perspective(3em) rotateX(20deg) scale(1, 0.15);
-    width: 200px;
-    height: 100px;
+    width: 100%;
+    height: 30%;
     opacity: 0; 
     filter: blur(2em);
     transition: all 1s ease;
@@ -236,9 +282,9 @@ a {
 
 #hello {
     position: absolute;
-    top: 30px;
-    left: 20px;
-    font-size: 1.3em;
+    top: 15%;
+    left: 10%;
+    font-size: min(2.4em, 3vw);
     font-family: 'Ubuntu', sans-serif;
     transition: top 0.5s ease 0.5s;
     -webkit-transition: top 0.5s ease 0.5s;
@@ -249,24 +295,62 @@ a {
 
 #myname {
     position: absolute;
-    top: 60px;
-    left: 13px;
+    bottom: 0;
+    top: auto;
+    left: 3%;
     font-family: 'Oswald', sans-serif;
     font-weight: 500;
-    font-size: 3.4em;
-    transition: top 0.5s ease 0.1s;
-    -webkit-transition: top 0.5s ease 0.1s;
-    -moz-transition: top 0.5s ease 0.1s;
-    -o-transition: top 0.5s ease 0.1s;
+    font-size: min(5em, 6.1vw);
+    /* transform: scale(1.2); */
+    transition: bottom 0.5s ease 0.1s;
+    -webkit-transition: bottom 0.5s ease 0.1s;
+    -moz-transition: bottom 0.5s ease 0.1s;
+    -o-transition: bottom 0.5s ease 0.1s;
     /* animation: intro-box-movement1 1s ease 1; */
 }
 
+.left-side {
+    position: relative;
+    width: 90%;
+    /* display: flex; */
+    /* border: 4px solid green; */
+    justify-content: center;
+    align-items: center;
+}
+
+.right-side {
+    position: relative;
+    width: 90%;
+    /* display: flex; */
+    /* border: 4px solid green; */
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+.pfp-container {
+    position:relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .pfp {
-    width: 300px;
-    height: 300px;
-    top: 4vw;
-    right: 10.8vw;
+    margin: 5% auto;
+    width: 70%;
+    max-width: 500px;
+    position: relative;
+    opacity: 0.7;
+}
+
+.pfp-actual {
+    margin: 0 auto;
+    width: 64%;
+    /* max-width: 483px; */
+    border-radius: 50%;
     position: absolute;
+    pointer-events: none;
+    /* inset: 1.6em auto auto 6em; */
 
 }
 
@@ -274,73 +358,162 @@ a {
     animation: my-rotate 4s ease infinite 0.5s;
 }
 
+.contact-links {
+    font-size:min(4em, 5.5vw);
+    /* font-size: 2.5em; */
+    display: flex;
+    position: relative;
+    margin: 0.3em auto 0.5em auto;
+    justify-content: center;
+    /* border: 4px solid blue; */
+    /* padding: 20px; */
+    color: #CD1818;
+    transform: scale(1.4);
+    /* text-align: center;     */
+}
+
 .about-me {
     position: relative;
-    /* display: flex; */
-    top: 70px;
-    height: 280px;
-    margin: 20px 20px;
-    border : 4px solid #A13333; border-radius: 10px;
-    padding: 20px;
-    font-family: "Oswald", sans-serif;
-    font-weight: 300;
-    color: rgb(233,225,221);
-    font-size: 1.3em;
+    margin: auto;
+    margin-top: 5em;
+    width: 80%;
+    max-width:1200px;
+    border : 0.3em solid #A13333; border-radius: 1em;
     animation: opacityUP 2s ease 1;
     -webkit-animation: opacityUP 2s ease 1;
     -moz-animation: opacityUP 2s ease 1;
     -o-animation: opacityUP 2s ease 1;
+    
 }
 
-.heading {
-    padding: 10px;
+.content {
     position: relative;
-    text-align: center;
-    color: #CD1818;
+    display: flex;
+    flex-direction: column-reverse;
+    /* border: 3px solid green; */
+    padding: 0.5em;
+    width: 90%;
+    margin: 0 auto;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.section1 {
+    position: relative;
+    width: 100%;
+    /* border: 4px solid lightblue; */
+    color: rgb(255,245,237);
     font-family: "Oswald", sans-serif;
-    font-weight: 500;
-    font-size: 2em;
+    font-weight: 300;
+    font-size: 2.5rem;
+    padding: 0.5em;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-me-pic {
+    position: absolute;
+    margin: auto;
+    
+    width: 90%;
+    max-width: 450px;
+    border-radius: 50%;
+}
+
+.section2 {
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 30rem;
+    
+    /* border: 4px solid lightblue; */
+    justify-content: center;
+    align-items: center;
 }
 
 .skills-interests {
     position: relative;
-    /* display: flex; */
-    top: 70px;
-    height: 380px;
-    margin: 20px 20px;
-    border : 4px solid #A13333; border-radius: 10px;
-    padding: 20px;
-    font-family: "Oswald", sans-serif;
-    font-weight: 300;
-    color: rgb(233,225,221);
-    font-size: 1.3em;
+    margin: auto;
+    margin-top: 5em;
+    width: 80%;
+    max-width:1200px;
+    border : 0.3em solid #A13333; border-radius: 1em;
     animation: opacityUP 2s ease 1;
     -webkit-animation: opacityUP 2s ease 1;
     -moz-animation: opacityUP 2s ease 1;
     -o-animation: opacityUP 2s ease 1;
+}
+
+.skills-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.webdev, .webdev-extra, .programming {
+    background: linear-gradient(to bottom, rgba(255,245,237,0.8), rgba(255,245,237,0.2));
+    border-radius: 1.5em;
+    display: flex;
+    flex-wrap: wrap;
+    /* flex-direction: column;  */
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+    padding: 1.5em;
+    /* height: 30em; */
+    /* border: 2px solid lightblue; */
+    margin: 0.5em;
+}
+
+.webdev .icon {
+    position: relative;
+    /* border: 2px solid blue; */
+    max-width: 33%;
+}
+
+#js {
+    max-width: 29%;
+}
+
+.programming .icon {
+    position: relative;
+    /* border: 2px solid blue; */
+    max-width: 32%;
+}
+
+.icon:hover {
+    animation: wiggle 1.5s ease-in-out infinite;
+    -moz-animation: wiggle 1.5s ease-in-out infinite;
+    -o-animation: wiggle 1.5s ease-in-out infinite;
+    -webkit-animation: wiggle 1.5s ease-in-out infinite;
+
 }
 
 .projects {
     position: relative;
-    /* display: flex; */
-    top: 70px;
-    height: 280px;
-    margin: 20px 20px;
-    border : 4px solid #A13333; border-radius: 10px;
-    padding: 20px;
-    font-family: "Oswald", sans-serif;
-    font-weight: 300;
-    color: rgb(233,225,221);
-    font-size: 1.3em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    /* bottom: 0; */
+    /* height: 66%; */
+    margin: 5em auto 2em auto;
+    padding: 1em;
+    width: 80%;
+    max-width:1200px;
+    border : 0.3em solid #A13333; border-radius: 1em;
     animation: opacityUP 2s ease 1;
     -webkit-animation: opacityUP 2s ease 1;
     -moz-animation: opacityUP 2s ease 1;
     -o-animation: opacityUP 2s ease 1;
+    
 }
-
+/* 
 .contact-me {
     position: relative;
-    /* display: flex; */
+    display: flex; 
     top: 70px;
     bottom: 50px;
     height: 480px;
@@ -350,20 +523,112 @@ a {
     font-family: "Oswald", sans-serif;
     font-weight: 300;
     color: rgb(233,225,221);
-    font-size: 1.3em;
+    font-size: var(--step-1);
+} */
+
+@media (orientation: landscape) {
+    .home {
+        flex-direction: row;
+        align-items: stretch;
+        padding: 2em;
+    }
+
+    .content {
+        flex-direction: row;
+        align-items: flex-center;
+        width: 100%;
+        margin: 0 auto;
+        /* padding: 2em; */
+    }
+
+    .section1 {
+        width:60%;
+        font-size: 1.7rem;
+        border: 4px solid lightblue;
+    }
+
+    .section2 {
+        width: 40%;
+        height: 20rem;
+    }
+
+    .home .left-side, .right-side {
+        width: 45%;
+    }
+
+    #hello {
+        font-size: min(1.5em, 2vw);
+    }
+
+    #myname {
+        font-size: min(3.4em, 4.3vw);
+    }
+
+    .intro-box {
+        /* transform: scale(1); */
+        width: 64%;
+        height: 7.5em;
+    }
+
+    .contact-links {
+        transform: scale(0.8);
+    }
+
+    .home, .about-me, .skills-interests, .projects {
+        width : 80%;
+        padding: 2em;
+    }
+
+    .contact-links {
+        margin: 0.3em auto;
+
+    }
 }
 
-.contact-links {
-    font-size:3em;
-    display: flex;
-    position: absolute;
-    right: 10vw;
-    bottom: 4vw;
-    /* padding: 20px; */
+
+.heading {
+    padding: 0 0.5em;
+    position: relative;
+    text-align: center;
     color: #CD1818;
-    /* text-align: center;     */
+    font-family: "Oswald", sans-serif;
+    font-weight: 500;
+    font-size: 5.5rem;
 }
 
+@media (orientation: landscape) {
+    .heading {
+        text-align: left;
+        font-size: 3.5rem;
+    }
+
+    .skills-content {
+        flex-direction: row;
+        align-items:stretch;
+
+    }
+
+    .webdev, .webdev-extra, .programming {
+        flex-direction: column;
+        padding: 1em;
+    }
+
+    .webdev .icon {
+        max-width: 54%;
+    }
+
+    .programming .icon {
+        max-width: 50%;
+    }
+
+    #js {
+        max-width: 47%;
+    }
+}
+
+.content-text {
+    font-size: 0.8em;
+}
 
 
 #link1, #link2, #link3, #link4 {
@@ -377,7 +642,7 @@ a {
 }
 
 #link {
-    margin: 10px;
+    margin: 1vw;
 }
 
 .footer {
@@ -385,7 +650,7 @@ a {
     /* border : 4px solid #A13333; border-radius: 10px; */
     top: 70px;
     height: 30px;
-    margin: 20px 20px;
+    margin: 2vw 2vw;
 }
 
 
@@ -395,13 +660,13 @@ a {
 }
 
 @keyframes navbar-startup1 {
-    0% {left:150px;}
-    100% {left:0px;}
+    0% {left:150px;opacity:0;}
+    100% {left:0px;opacity:1;}
 }
 
 @keyframes navbar-startup2 {
-    0% {left:60px;}
-    100% {left:0px;}
+    0% {left:60px;opacity:0;}
+    100% {left:0px;opacity:1;}
 }
 
 /* @keyframes navbar-startup3 {
@@ -410,13 +675,13 @@ a {
 } */
 
 @keyframes navbar-startup4 {
-    0% {left:-60px;}
-    100% {left:0px;}
+    0% {left:-60px;opacity:0;}
+    100% {left:0px;opacity:1;}
 }
 
 @keyframes navbar-startup5 {
-    0% {left:-150px;}
-    100% {left:0px;}
+    0% {left:-150px;opacity:0;}
+    100% {left:0px;opacity:1;}
 }
 
 @keyframes intro-box-shadow {
@@ -450,4 +715,10 @@ a {
     0% {transform: rotate(0deg);}
     /* 50% {transform: rotate(180deg);} */
     100% {transform: rotate(360deg);}
+}
+
+@keyframes wiggle {
+    40% {transform: rotate(-5deg) scale(1.05);}
+    60% {transform: rotate(5deg) scale(1.05);}
+    100% {transform: rotate(0deg) scale(1);}
 }
