--- a/style.css
+++ b/style.css
@@ -544,7 +544,7 @@ a {
     .section1 {
         width:60%;
         font-size: 1.7rem;
-        border: 4px solid lightblue;
+        /* border: 4px solid lightblue; */
     }
 
     .section2 {
