--- a/style.css
+++ b/style.css
@@ -379,14 +379,14 @@ a {
 }
 
 
-#link1, #link2, #link3, #link4 {
+#link1, #link2, #link3, #link4, #link5 {
     height: 6vh;
     max-height: 11vw;
     margin: min(0.5em, 0.75vw);
     transition: transform 0.5s ease;
 }
 
-#link1:hover, #link2:hover, #link3:hover, #link4:hover {
+#link1:hover, #link2:hover, #link3:hover, #link4:hover, #link5:hover {
     animation: my-rotate2 1s ease infinite;
     /* transform: scale(0.8);  */
 }
@@ -709,10 +709,14 @@ a {
         /* margin-bottom: min(1em, 1.5vw); */
     }
 
-    #link1, #link2, #link3, #link4 {
+    #link1, #link2, #link3, #link4, #link5 {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         height: 3em;
         max-height: 10vh;
         margin: 0;
+        /* border: 2px solid purple; */
     }
 
     .about-me, .skills-interests, .projects {
